# RTOSxenoLabs

./: Song Generation (P3).pptx  Untitled4.ipynb  Untitled5.ipynb  generated_song_1.neslm  gridscharts.xlsx
List4/: CMakeLists.txt
List5/Task1/: CMakeLists.txt  task1.c
List5/Task2/: CMakeLists.txt  task2.c
List5/Task3/: CMakeLists.txt  task3.c
List5/Task4/: CMakeLists.txt  task4.c
